--- a/etc/systemd/system/radio.service
+++ b/etc/systemd/system/radio.service
@@ -5,3 +5,4 @@ Description=WebRadio metadata
 Type=simple
 ExecStart=/srv/http/bash/status-radio.sh
 ExecStop=/usr/bin/rm /srv/http/data/shm/radio
+Restart=always
