--- a/etc/shairport-sync.conf
+++ b/etc/shairport-sync.conf
@@ -5,6 +5,7 @@ general = {
 sessioncontrol = {
 	run_this_before_play_begins = "/usr/bin/sudo /srv/http/bash/shairport.sh";
 	run_this_after_play_ends = "/usr/bin/sudo /srv/http/bash/shairport.sh stop";
+	wait_for_completion = "yes";
 }
 alsa = {
 	output_device = "hw:0";
